src/components/TaskItem/TaskItem.module.scss
%hover-active-effect {
  box-shadow: 0 0 5px #333;
  background-color: rgba(255, 255, 255, 0.33);
}

.taskItem {
  display: flex;
  border-radius: 10px;
  padding: 20px 15px;
  background-color: rgba(255, 255, 255, 0.4);
  cursor: grab;
  transition:
    background-color 0.3s,
    box-shadow 0.3s;
  animation: appear 0.5s;

  &:hover {
    @extend %hover-active-effect;
  }

  &:active {
    @extend %hover-active-effect;
    cursor: grabbing;
  }

  &:not(:last-child) {
    margin-bottom: 10px;
  }
}

.text {
  flex: 1;
  margin: 0px 10px;
  font-size: 22px;
  line-height: 30px;
  word-wrap: break-word;
  min-width: 0;
}

input.text {
  font-family: inherit;
  background-color: transparent;
  color: var(--theme-input-text);
  margin: 0px 5px;
  padding: 0px 5px;
  box-shadow: 0 4px 0 -3px whitesmoke;

  &:focus {
    box-shadow: inset 0 0 5px #e3e3e3;
  }
}

.controlButtons {
  align-self: center;
}

.controlButton {
  display: inline-block;
  background-color: transparent;
  font-size: 20px;
  line-height: 0;
  padding: 5px;
  transition: transform 0.2s;

  &:hover {
    transform: scale(1.2);
  }

  &:active {
    transform: scale(1);
  }

  &:not(:last-child) {
    margin-right: 5px;
  }
}

@keyframes appear {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

